--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -37,11 +37,13 @@ body{
 
 	box-sizing: border-box;
 
-  	font-family: "Aktiv Grotesk";
+  	font-family: "aktiv-grotesk";
 	font-weight: normal;
 	font-size: 16px;
 	line-height: 22.4px;
 	color: #2628c4;
+	transition: background-color .4s ease;
+	transition-property: background-color, color;
 
 }
 
@@ -155,10 +157,13 @@ button:focus,
 	left: 50%;
 	transform: translateX(-50%);
 	z-index: 2;
+	color: white;
+}
+.content-bottom.blue_ p{
+	color: #2628C4;
 }
 .content-bottom p{
 	text-align: center;
-	color: #fff;
 	text-transform: uppercase;
 	margin-bottom: 30px;
 }
@@ -179,6 +184,7 @@ button:focus,
 	width: 100%;
 	height: 100vh;
 	background-color: #2628C4;
+	overflow: hidden;
 }
 .accesscode::after,
 .accesscode::before,
@@ -272,7 +278,7 @@ footer{
 	display: inline-block;
 	margin-bottom: 19px;
 
-	font-family: "Aktiv Grotesk";
+	font-family: "aktiv-grotesk";
 	font-size: 12px;
 	letter-spacing: 0.02em;
 	line-height: 16.8px;
@@ -335,7 +341,7 @@ footer .content-bottom p{
 	margin: 30px auto 0;
 	text-align: center;
 	
-	font-family: "Aktiv Grotesk";
+	font-family: "aktiv-grotesk";
 	font-size: 12px;
 	letter-spacing: 0.02em;
 	line-height: 16.8px;
@@ -431,8 +437,12 @@ footer .content-bottom p{
 	font-style: normal;
 }
 .goals{
-	color: #2628C4;
+	/* color: #2628C4; */
 	text-align: center;
+}
+.goals.blue_{
+	background-color: #2628C4;
+	color: white;
 }
 .section{
 	box-sizing: border-box;
@@ -443,8 +453,15 @@ footer .content-bottom p{
 	margin: 40px auto 30px;
 }
 .goals p,
-.accounts p{
+.accounts p,
+.sectionct p{
 	max-width: 583px;
+}
+.sectionct p{
+	margin-bottom: 22px;
+}
+.sectionct p:last-child{
+	margin-bottom: 0;
 }
 h4,
 .small{
@@ -457,11 +474,20 @@ h4,
 	text-transform: uppercase;
 }
 .accounts{
-	background-color: #2628C4;
-	color: white;
+	/* background-color: #2628C4;
+	color: white; */
 	text-align: center;
 }
-.accounts h4{
+.accounts.green_,
+.green_{
+	background-color: #D1DED1;
+	color: #2628C4;
+}
+.green_ input,
+.green_ textarea{
+	color: #2628C4;
+}
+.sectionct h4{
 	margin-bottom: 20px;
 }
 .accslider{
@@ -489,36 +515,492 @@ h4,
 .accslider-desc .swiper-slide-active p{
 	opacity: 1;
 }
+.portfoliomodel{
+	/* background-color: #D1DED1;
+	color: #2628C4; */
+	text-align: center;
+}
+.mdlslider{
+	margin: 125px auto 30px;
+	height: 425px;
+}
+.mdlslider .sectionct{
+	margin: 0 auto;
+}
+.mdlslider .title{
+	margin: 40px auto 30px;
+}
+.mdlslider .swiper-slide img{
+	width: auto;
+	height: 84px;
+}
+#discover{
+	padding: 29px 0 34px;
+	color: #2628C4;
+}
+#discover span{
+	display: inline-block;
+	margin-bottom: 10px;
+	font-size: 12px;
+}
+.ftrmenu{
+	margin: 75px auto 0;
+	font-size: 14px;
+	text-align: center;
+	text-transform: uppercase;
+}
+#faq-popup{
+	position: fixed;
+	z-index: 9;
+	background-color: white;
+	width: 100%;
+	height: 100vh;
+	box-sizing: border-box;
+	padding: 159px 0 20px;
+	color: #2628C4;
+	overflow: hidden;
+	top: 0;
+	left: 0;
+	flex-direction: column;
+	justify-content: space-between;
+
+	opacity: 0;
+	visibility: hidden;
+	transition: opacity .4s ease;
+	transition-property: opacity , visibility;
+}
+#faq-popup.active_{
+	opacity: 1;
+	visibility: visible;
+}
+#faq-popup .sectionct{
+	max-width: 325px;
+	margin: 0 auto 80px;
+	text-align: center;
+}
+.ecHead{
+	padding: 40px 30px;
+}
+.ecHead .container{
+	align-items: center;
+	justify-content: space-between;
+	max-width: 1366px;
+}
+.ecHead .title{
+	font-size: 30px;
+	line-height: 36px;
+	max-width: 540px;
+	text-transform: none;
+}
+.ecHead p{
+	font-size: 12px;
+}
+.ecAdditional{
+	align-items: center;
+	gap: 12px;
+	justify-content: flex-end;
+}
+.ecAdditional p{
+	margin-right: 40px;
+}
+.ecTax,.ecAdditional{
+	width: 200px;
+}
+.each-ec{
+	border-bottom: 1px solid #2628C4;
+}
+#faq-popup .content-bottom p{
+	font-size: 10px;
+	line-height: 14px;
+}
+#faq-popup .content-bottom{
+	transform: unset;
+	position: static;
+	margin-top: 120px;
+}
+#faq-popup .each-ec{
+	opacity: .4;
+	transition: opacity .4s ease;
+}
+#faq-popup .each-ec:hover{
+	opacity: 1;
+}
+
 /*==========================*/
 /*slick padding left*/
 .listprocess .slick-list{
   padding-left: calc((100vw - var(--cont)) / 2);
 }
-/* ============= */
-/* RESPONSIVE  */
-/* ========  */
-
-@media (max-width: 1290px){
-
+/* BUTTON */
+.bigbtn{
+	display: inline-block;
+	box-sizing: border-box;
+	padding: 20px 40px 15px;
+	width: 408px;
+	max-width: 100%;
+	font-family: "HW Atlantic";
+	font-weight: normal;
+	font-size: 20px;
+	letter-spacing: 0.03em;
+	line-height: 22px;
+	text-align: center;
+	color: #2628c4;
+	position: relative;
+	cursor: pointer;
+	overflow: hidden;
+	border-radius: 27.5px;
+	background: transparent;
+	border: 1px solid #2628c4;
+	transition: color .3s ease;
 }
-@media (max-width: 1024px){
-
+.bigbtn span{
+	z-index: 2;
+	color: inherit;
+	position: inherit;
 }
-@media (max-width: 900px){
-
+.bigbtn::before{
+	content: '';
+	position: absolute;
+	background-color: #2628c4;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
+	transform: translateY(101%);
+	transition: transform .3s ease;
 }
-@media (max-width: 821px){
-
+.bigbtn:hover{
+	color: white;
 }
-@media (max-width: 700px){
-
+.bigbtn:hover::before{
+	transform: translateY(0%);
 }
-@media (max-width: 500px){
-
+.hgslider .swiper-pagination{
+	position: static;
+	margin-top: 118px;
+	display: flex;
+	gap: 7px;
+	padding: 0 22px;
+	box-sizing: border-box;
 }
+.hgslider .swiper-pagination-bullet{
+	width: 100%;
+    height: auto;
+    background: transparent;
+    padding-bottom: 19px;
+    border-bottom: 1px solid #242FBC;
+    border-radius: 0;
+    font-size: 12px;
+    text-transform: uppercase;
+	letter-spacing: 0.02em;
+	box-sizing: border-box;
+	padding: 0 20px 0 25px;
+	position: relative;
+}
+.hgslider .swiper-pagination-bullet i{
+	font-style: normal;
+	position: absolute;
+	left: 0;
+}
+.itm_{
+	display: inline-block;
+	overflow: hidden;
+	max-width: 0px;
+	transition: max-width .4s ease;
+}
+.swiper-pagination-bullet-active .itm_{
+	max-width: none;
+}
+.itm_ span{
+	display: block;
+	min-width: max-content;
+}
+#approach{
+	padding: 80px 0 120px;
+}
+#approach h4{
+	margin: 0 auto;
+}
+#approach .titleMigra{
+	margin: 105px auto 32px;
+	max-width: 1022px;
+	font-size: 50px;
+	line-height: 60px;
+}
+#approach .excol{
+	width: 100%;
+}
+.excol-icon{
+	display: block;
+	width: 17px;
+	height: 17px;
+	position: relative;
+	cursor: pointer;
+	overflow: hidden;
+}
+.excol-icon::before,
+.excol-icon::after{
+	content: '';
+	display: inherit;
+	width: 100%;
+	height: 1.5px;
+	background-color: #242FBC;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%,-50%);
+}
+.excol-icon::after{
+	transform: translate(-50%,-50%) rotate(90deg);
+	transition: max-width .5s ease;
+	max-width: 17px;
+}
+.active .excol-icon::after{
+	max-width: 0px;
+}
+.ecBody{
+	overflow: hidden;
+	max-height: 0px;
+	transition: max-height .5s ease;
+}
+.ecBody .wrap_{
+	text-align: center;
+	padding-bottom: 40px;
+}
+#document .sectionct{
+	gap: 15px;
+}
+.visimisi{
+	margin-top: 60px;
+	justify-content: space-between;
+	position: relative;
+}
+.visimisi .sectionct{
+	width: calc((100% - 524px) / 2);
+	padding: 0 40px 50px;
+	box-sizing: border-box;
+}
+.figparallax{
+	position: absolute;
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 524px;
+	height: 624px;
+}
+#navigating.section{
+	padding-bottom: 0;
+}
+#care{
+	padding: 545px 0 83px;
+}
+#team{
+	padding: 89px 0 60px;
+	max-width: 100%;
+	overflow: hidden;
+}
+.white_{
+	background-color: white;
+	color: #242FBC;
+}
+#team .container{
+	width: 100%;
+	max-width: 1440px;
+	box-sizing: border-box;
+	padding-left: 18px;
+	gap: 70px;
+}
+#team .sectionct{
+	min-width: 301px;
+}
+#team .sectionct h4{
+	text-align: left;
+}
+.wrapTeamSlider{
+	width: 100%;
+	padding-top: 42px;
+}
+.tmslider{
+	width: 100vw;
+}
+.tmslider .swiper-slide{
+	width: 355.4px;
+	text-align: center;
+	margin-right: 20px;
+}
+.tmslider figure{
+	width: 100%;
+	height: 471.48px;
+	margin-bottom: 30px;
+	overflow: hidden;
+}
+.tmslider .title{
+	font-size: 30px;
+	line-height: 40px;
+}
+.tmslider p{
+	font-size: 12px;
+	text-transform: uppercase;
+	margin-top: 5px;
+}
+.wrapArrow{
+	gap: 20px;
+	margin-top: 80px;
+}
+.wrapArrow .arw{
+	position: static;
+}
+.tmslider .cover{
+	width: 120%;
+    position: relative;
+    left: -10%;
+}
+#fees{
+	padding: 60px 0;
+}
+#fees .sectionct{
+	text-align: center;
+	margin-bottom: 80px;
+}
+.feewarp{
+	flex-wrap: wrap;
+}
+.feedata{
+	position: relative;
+	box-sizing: border-box;
+	padding: 80px 40px;
+	text-align: center;
+	color: #242FBC;
+	text-transform: uppercase;
+	font-size: 14px;
+	width: calc(100% / 3);
+	border-right: 1px solid #242FBC;
+	border-top: 1px solid #242FBC;
+}
+.feedata p.flex{
+	justify-content: center;
+}
+.feedata .title{
+	font-size: 20px;
+	line-height: 25px;
+}
+.feedata .title:first-child{
+	font-size: 50px;
+	margin-bottom: 20px;
+	line-height: 55px;
+}
+.feedata:nth-child(3n+3){
+	border-right: 0px;
+}
+.feedata:nth-child(-n+3){
+	border-top: 0px;
+}
+.feedata:nth-child(3n+2)::after,
+.feedata:nth-child(3n+2)::before{ 
+	content: '';
+	position: absolute;
+	width: 10px;
+	height: 10px;
+	background-color: white;
+	bottom: 0;
+	left: 0;
+	transform: translate(-50%,50%);
+	z-index: 2;
+}
+.feedata:nth-child(3n+2)::before{
+	left: auto;
+	right: 0;
+	transform: translate(50%,50%);
+}
+#letter{
+	padding: 60px 0 120px;
+}
+#letter .container{
+	max-width: 578px;
+}
+.lettercontent p:first-child::first-letter {
+	initial-letter: 3 2;
+}
+.lettercontent p{
+	margin-bottom: 36px;
+	font-size: 30px;
+	line-height: 36px;
+	font-family: "HW Atlantic";
+	text-transform: uppercase;
+}
+.lettercontent img{
+	margin: 0 auto;
+}
+.wrapform{
+	margin-top: 120px;
+}
+.wrapform input,
+.wrapform textarea{
+	display: block;
+}
+.wrapform input.title{
+	font-size: 30px;
+	line-height: 40px;
+	border-bottom: 1px solid #242FBC;
+	margin-bottom: 8px;
+	text-transform: none;
+}
+.wrapform ::placeholder{
+	color: #242FBC;
+}
+.wrapform textarea{
+	margin: 40px auto 0;
+	font-family: "aktiv-grotesk";
+	width: 100%;
+	max-width: 589px;
+	text-align: center;
+}
+.sectionCTA button{
+	margin: 120px auto 0;
+}
+.sectionCTA{
+	text-align: center;
+	padding: 80px 0;
+}
+#discover.green_{
+	background-color: #F6F9F6;
+}
+#mainav{
+	position: fixed;
+	top: 0;
+	width: 100%;
+	z-index: 99;
+}
+#mainav .container{
+	justify-content: space-between;
+	align-items: center;
+	padding: 25px 0;
+}
+.adptv_{
+	transition: filter .4s ease;
+	filter: invert(85%) sepia(90%) saturate(1%) hue-rotate(254deg) brightness(105%) contrast(101%);
+}
+.gr_ .adptv_{
+	filter: invert(23%) sepia(89%) saturate(4724%) hue-rotate(238deg) brightness(75%) contrast(109%);
+}
+#mainav .container::before{
+	content: '';
+}
+.compass_,
+#mainav .container::before{
+	width: 25px;
+	height: 25px;
+}
+.compass_ img{
+	transition: transform .3s cubic-bezier(0.34, 1.56, 0.64, 1);
+}
+.compass_:hover img{
+	transform: rotate(45deg);
+}
+
 
 /* odomater custom */
-.odometer{
+#wrapodo .odometer{
 	font-family: "HW Atlantic";
 	font-weight: normal;
 	font-size: 275px;
@@ -632,3 +1114,228 @@ h4,
   #wrapodo.active.done .odometer-digit{
 	transform: translateY(-100%);
   }
+  .feedata .odometer-digit:first-child{
+	display: none;
+  }
+  .feedata .odometer-digit:nth-child(3)::after{
+	display: inline-block;
+	content: '.';
+  }
+
+  /* newupdate */
+.hide_{
+	opacity: 0;
+	visibility: hidden;
+}
+/* ============= */
+/* RESPONSIVE  */
+/* ========  */
+
+@media (max-width: 1290px){
+
+}
+@media (max-width: 1024px){
+
+}
+@media (max-width: 955px){
+	.homepageslider .swiper-slide{
+		height: calc(100vh - 200px);
+		width: 100vw;
+	}
+	.homepageslider{
+		height: 100vh;
+	}
+	.accslider .titleMigra{
+		width: auto;
+	}
+	.swiper-wrapper{
+		align-items: center;
+	}
+	.accslider .titleMigra{
+		font-size: 95px;
+		line-height: 105px;
+	}
+	.footerinfo,
+	.visimisi{
+		flex-direction: column;
+		align-items: center;
+		gap: 40px;
+	}
+	.figparallax{
+		position: static;
+		transform: unset;
+	}
+	.visimisi .sectionct{
+		width: 100%;
+		max-width: 388px;
+		padding: 0;
+	}
+	#care{
+		padding-top: 225px;
+	}
+	#team .container{
+		flex-direction: column;
+		gap: 17px;
+		padding-left: 0;
+	}
+	#team .sectionct{
+		min-width: unset;
+		box-sizing: border-box;
+		position: relative;
+		padding-left: 20px;
+	}
+	.wrapArrow{
+		position: absolute;
+		top: 10px;
+		margin: 0;
+		right: 20px;
+	}
+	#team .sectionct p{
+		max-width: 388px;
+	}
+	.tmslider{
+		padding-left: 20px;
+	}
+	.wrapTeamSlider{
+		padding-top: 0;
+	}
+	.feedata{
+		width: calc(100% / 2);
+	}
+	.feedata:nth-child(3n+3){
+		border-right: 1px solid #242FBC;
+	}
+	.feedata:nth-child(-n+3){
+		border-top: 1px solid #242FBC;
+	}
+	.feedata:nth-child(-n+2){
+		border-top: 0px;
+	}
+	.feedata:nth-child(2n+2){
+		border-right: 0px;
+	}
+	.feedata:nth-child(3n+2)::after, .feedata:nth-child(3n+2)::before{
+		display: none;
+	}
+	.feedata:nth-child(2n+1)::after{
+		content: '';
+		position: absolute;
+		width: 10px;
+		height: 10px;
+		background-color: white;
+		bottom: 0;
+		right: 0;
+		transform: translate(50%,50%);
+		z-index: 2;
+	}
+	.fi_{
+		width: 100%;
+	}
+}
+@media (max-width: 821px){
+
+}
+@media (max-width: 767px){
+	body{
+		/* font-size: 14px;
+    	line-height: 20.4px; */
+	}
+	.container, .navcontainer{
+		width: calc(100% - 40px);
+	}
+	.content-bottom p{
+		margin-bottom: 60px;
+	}
+	#wrapodo .odometer{
+		font-size: 154px;
+		line-height: 154px;
+	}
+	.title{
+		font-size: 46px;
+		line-height: 55px;
+	}
+	.fi_ p{
+		font-size: 30px;
+		line-height: 36px;
+	}
+	.figparallax{
+		max-width: 100%;
+	}
+	#care,
+	.goals,
+	.accslider-desc p{
+		padding-left: 20px;
+		padding-right: 20px;
+	}
+	.tmslider .swiper-slide{
+		width: calc(100vw - 40px);
+	}
+	.feedata,
+	.feedata:nth-child(2),
+	.feedata:nth-child(3n+3){
+		width: 100%;
+		border: 0px;
+		border-top: 1px solid #242FBC;
+		padding: 60px 0;
+	}
+	.feedata:nth-child(2n+1)::after{
+		display: none;
+	}
+	#fees .sectionct{
+		margin-bottom: 0;
+	}
+	#fees .sectionct p{
+		max-width: 230px;
+	}
+	.lettercontent p{
+		font-size: 28px;
+		line-height: 33px;
+	}
+	.wrapform input.title{
+		font-size: 21px;
+    	line-height: 35px;
+	}
+	.bigbtn{
+		min-width: 210px;
+		width: auto;
+	}
+	#document .bigbtn{
+		width: 100%;
+	}
+	.ecHead{
+		padding: 40px 0;
+	}
+	.section{
+		padding: 80px 0;
+	}
+	#approach .titleMigra{
+		margin-top: 80px;
+	}
+	.accounts .arw{
+		display: none;
+	}
+	.titleMigra,
+	.accslider .titleMigra{
+		font-size: 65px;
+    	line-height: 70px;
+	}
+	.homepageslider h2{
+		font-size: 50px;
+		line-height: 60px;
+	}
+	.homepageslider .swiper-slide{
+		height: calc(100vh - 280px);
+	}
+	.relationshipslider .swiper-slide{
+		width: 100vw;
+		box-sizing: border-box;
+		padding: 0 20px;
+	}
+	.relationshipslider .arw{
+		top: 67%;
+	}
+}
+
+@media (max-width: 500px){
+
+}
